--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -19,6 +19,7 @@
     <div id="game-container">
         <script src="../phaser/lib/phaser.js"></script>
         <script src="../phasergizmos/gizmos.js"></script>
+        <script src="./src/prefabs/Asteroid.js"></script>
         <script src="./src/prefabs/HamsterShip.js"></script>
         <script src="./src/prefabs/Spaceship.js"></script>
         <script src="./src/scenes/Menu.js"></script>
