created bullet class, primary fire is done

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -22,6 +22,7 @@
         <script src="./src/prefabs/Asteroid.js"></script>
         <script src="./src/prefabs/HamsterShip.js"></script>
         <script src="./src/prefabs/Spaceship.js"></script>
+        <script src="./src/prefabs/Bullet.js"></script>
         <script src="./src/scenes/Menu.js"></script>
         <script src="./src/scenes/Play.js"></script>
         <script src="./src/scenes/Editor.js"></script>
