--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -20,9 +20,10 @@
         <script src="../phaser/lib/phaser.js"></script>
         <script src="../phasergizmos/gizmos.js"></script>
         <script src="./src/prefabs/Asteroid.js"></script>
+        <script src="./src/prefabs/Bullet.js"></script>
         <script src="./src/prefabs/HamsterShip.js"></script>
         <script src="./src/prefabs/Spaceship.js"></script>
-        <script src="./src/prefabs/Bullet.js"></script>
+        <script src="./src/prefabs/Rocket.js"></script>
         <script src="./src/scenes/Menu.js"></script>
         <script src="./src/scenes/Play.js"></script>
         <script src="./src/scenes/Editor.js"></script>
