added debug options

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -34,8 +34,14 @@
     
     
         <div id="debug-window">
-            <h3>Debug Window</h3>
-            <button id ="enable-gizmos" class="toggle-gizmos"></button>
+            <h3>Visual Debug</h3>
+            <button id ="enable-gizmos">Gizmos</button>
+            <button id ="enable-edit">Edit Mode</button>
+        </div>
+
+        <div id="debug-window">
+            <h3>Player Debug</h3>
+            <button id ="enable-primary">Primary</button>
         </div>
     </div>
 
