--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -26,7 +26,9 @@
             <script src="./src/prefabs/HamsterShip.js"></script>
             <script src="./src/prefabs/Spaceship.js"></script>
             <script src="./src/prefabs/Rocket.js"></script>
+            <script src="./src/prefabs/TutorialRocket.js"></script>
             <script src="./src/scenes/Menu.js"></script>
+            <script src="./src/scenes/LevelZero.js"></script>
             <script src="./src/scenes/Play.js"></script>
             <script src="./src/scenes/Editor.js"></script>
             <script src="./src/main.js"></script>
