changes rocket to hamster ship after 3 hits

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -27,6 +27,7 @@
             <script src="./src/prefabs/Spaceship.js"></script>
             <script src="./src/prefabs/Rocket.js"></script>
             <script src="./src/prefabs/TutorialRocket.js"></script>
+            <script src="./src/scenes/Loading.js"></script>
             <script src="./src/scenes/Menu.js"></script>
             <script src="./src/scenes/LevelZero.js"></script>
             <script src="./src/scenes/Play.js"></script>
