--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -22,6 +22,7 @@
             <script src="../phasergizmos/skychart.js"></script>
             <script src="../sound_manager/SoundManager.js" ></script>
             <script src="./src/spawner.js"></script>
+            <script src="../waves/Waves.js" ></script>
 
             <!--- PREFABS -->
             <script src="./src/prefabs/Asteroid.js"></script>
