started reworking level 0

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -24,7 +24,7 @@
             <script src="./src/skychart.js"></script>
             <script src="./src/soundmanager.js"></script>
             <script src="./src/spawner.js"></script>
-            <script src="../waves/Waves.js" ></script>
+            <script src="./src/waves.js" ></script>
 
             <!--- PREFABS -->
             <script src="./src/prefabs/Asteroid.js"></script>
