working on lvl0

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -25,6 +25,7 @@
             <script src="./src/soundmanager.js"></script>
             <script src="./src/spawner.js"></script>
             <script src="./src/waves.js" ></script>
+            <script src="./src/levelzero_spawner.js"></script>
 
             <!--- PREFABS -->
             <script src="./src/prefabs/Asteroid.js"></script>
