OMG THE AUDIO FILES

--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -29,6 +29,7 @@
             <!--- PREFABS -->
             <script src="./src/prefabs/Asteroid.js"></script>
             <script src="./src/prefabs/Snakeship.js"></script>
+            <script src="./src/prefabs/Spaceship.js"></script>
             <script src="./src/prefabs/Bullet.js"></script>
             <script src="./src/prefabs/HamsterShip.js"></script>
             <script src="./src/prefabs/Rocket.js"></script>
