--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -28,6 +28,7 @@
             <script src="./src/levelzero_spawner.js"></script>
 
             <!--- PREFABS -->
+            <script src="./src/prefabs/Plane.js"></script>
             <script src="./src/prefabs/Asteroid.js"></script>
             <script src="./src/prefabs/Snakeship.js"></script>
             <script src="./src/prefabs/Bullet.js"></script>
