--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     </div>
 
     <div class="innerbody">    
+
+
+        <div id="card">
+            <a href="./hosi-game/hosi.html">
+                <img src="https://file.notion.so/f/s/fb4d1fe9-c1a8-427e-bc52-9e8163bba0cf/5fjg1chbkt991.webp?id=b77de280-2d68-4830-860e-02cae258833d&table=block&spaceId=7b6fbf06-5a76-4522-b535-9c6efd54a2e7&expirationTimestamp=1684194608178&signature=gx72-AuIhV0uk1YgSmjdyE-uCqpaG9CbKYAfR2Zd2T4">
+            </a> 
+            <h1>Hamster Origins : Snake Invaders</h1>
+        </div>
+
+        <!--
+
         <div id="card">
             <a href="./RocketPatrol/rocketpatrol.html">
                 <img src="https://i.pinimg.com/564x/16/9c/41/169c41b2df93b081b7857bf8364a3951.jpg">
@@ -23,14 +34,6 @@
             <h1>Play Rocket Patrol</h1>
         </div>
 
-        <div id="card">
-            <a href="./hosi-game/hosi.html">
-                <img src="https://file.notion.so/f/s/505c4865-426a-4a48-a2d7-cd8b4ce97086/Untitled.png?id=c3ce4b0c-3fe2-401e-bc44-754ab7ef2c4a&table=block&spaceId=7b6fbf06-5a76-4522-b535-9c6efd54a2e7&expirationTimestamp=1683620679082&signature=21aQJatHfGiu1QbVy6D1teRD8mY44hsDv9bp6KzOcyw&downloadName=Untitled.png">
-            </a> 
-            <h1>Hamster Origins : Snake Invaders</h1>
-        </div>
-
-        <!--
         <div id="card">
             <a href="./colorpalette/colorpalette.html">
                 <img src="https://i.pinimg.com/564x/09/ba/d8/09bad82969730282b73a9ac5160bf018.jpg">
