--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -26,6 +26,8 @@
             <script src="./src/spawner.js"></script>
             <script src="./src/waves.js" ></script>
             <script src="./src/levelzero_spawner.js"></script>
+            <script src="./src/uiElement.js"></script>
+
 
             <!--- PREFABS -->
             <script src="./src/prefabs/Plane.js"></script>
