--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -26,7 +26,7 @@
             <script src="./src/spawner.js"></script>
             <script src="./src/waves.js" ></script>
             <script src="./src/levelzero_spawner.js"></script>
-            <script src="./src/uiElement.js"></script>
+            <script src="./src/ui.js"></script>
 
 
             <!--- PREFABS -->
