--- a/hosi-game/hosi.html
+++ b/hosi-game/hosi.html
@@ -51,7 +51,7 @@
             <h2 style="color:white">HamsterOrigins :</h2>
             <h2 style="color:white">Snake Invaders</h2>
             <h3 style="color:white">Sky Casey , Tatiana Lucero , Athena Patronas</h3>
-            <h3 style="color:white">cmpm120 - Nathan Atlice</h3>
+            <h3 style="color:white">120 - 2023</h3>
         </div>
     
     
