--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="game-window">
         <div id="game-container">
-            <script src="../phaser/lib/phaser.js"></script>
+            <script src="phaser/lib/phaser.js"></script>
 
             <!-- CUSTOM CLASSES -->
             <script src="./src/gizmos.js"></script>
